(Forward-port kdelibs commit 534b15605dfd37c5d096c402093b43c1c1742759)

@font-face rule: fix overriding of src property declarations.

BUG: 328982
FIXED-IN: 4.11.5